tests/security/taintedCookie/output.txt
ERROR: TaintedData - input.hack:1:27 - Detected tainted cookie